<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_TwitterPosting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.twitter.TwitterPosting">

    <TextView
        android:id="@+id/postTitleMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/postTxt"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/confirmInputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/postTitleMsg"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/FeedPicDesp"
            android:src="@drawable/twitter_logo"
            tools:visibility="visible" />

        <CheckBox
            android:id="@+id/checkedText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_vertical"
            android:layout_weight="1"
            android:text="@string/postWish2"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/postImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/confirmInputs"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/msgInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAlignment="center"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:hint="@string/messagesTxt"
            android:autofillHints=""/>

        <Button
            android:id="@+id/getPicBtn"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/postPic" />

        <Button
            android:id="@+id/postingSubmitBtn"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post" />

    </LinearLayout>
</RelativeLayout>