<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.twitter.TwitterSignIn">

    <com.twitter.sdk.android.core.identity.TwitterLoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="200dp" />

    <TextView
        android:id="@+id/loginTxtView"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="6dp"
        android:text="@string/signInMsg"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="28sp"
        android:textStyle="bold" />

</RelativeLayout>