...
    <string name="light">Light</string>
    <string name="lightOffTxt">Light will not be used in Notifications</string>
    <string name="lightOnTxt">Light will be used in Notifications</string>

    <!--  Social Sites Text -->
    <string name="createPost">Create Post</string>
    <string name="post">Post</string>
    <string name="postTxt">Post an Update to: </string>
    <string name="postWish">Wish to post</string>
    <string name="postWish2">I wish to post</string>
    <string name="refresh">Refresh</string>
    <string name="downloadFeed">Download Feed</string>
    <string name="FeedPicDesp">Picture from Feed</string>
...
    <string name="noMsg">No Messages</string>
    <string name="link">View Link</string>
    <string name="feedTitle">Item from Feed</string>
    <string name="sharingTo">Sharing to</string>
    <string name="picAdded">Picture added!</string>
    <string name="feedIcon">Social media icon</string>
    <string name="postPic">Add a picture to your post</string>
    <string name="postVideo">Add a video to your post</string>
    <string name="postingCheckBox">Must have box checked to share!</string>
    <string name="viewTimeLine">View Latest Tweets</string>

    <!--  Important Facebook & Twitter values -->
    <string name="facebook_app_id">763430430754593</string>
...
